# parze

./: Cargo.toml  README.md
benches/: json.rs  small_sample.json
examples/: custom_error.rs  expr.rs  json.rs  morse.rs
parze-declare/: Cargo.toml
parze-declare/src/: expr.rs  lib.rs  rule.rs
parze-declare/tests/: basic.rs
src/: also.rs  chain.rs  error.rs  fail.rs  lib.rs  pad.rs  parse_fn.rs  reduce.rs  repeat.rs
tests/: basic.rs  macro.rs
