[package]
name = "parze"
version = "0.1.0"
description = "A clean, efficient parser combinator"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
