[package]
name = "parze"
version = "0.5.1"
description = "A clean, efficient parser combinator"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
documentation = "https://docs.rs/parze"
repository = "https://www.github.com/zesterer/parze"
homepage = "https://www.github.com/zesterer/parze"
keywords = ["parse", "token", "symbol", "no_std"]
categories = ["parsing", "no-std"]
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
macros = ["nightly"]
nightly = []
default = ["nightly", "macros"]

[dependencies]
parze-declare = { path = "parze-declare" }

[dev-dependencies]
pom = "3.0"
nom = "5.0"
